spoil close button small fixes

--- a/4pdasources/src/main/assets/forum/css/material_black.css
+++ b/4pdasources/src/main/assets/forum/css/material_black.css
@@ -401,6 +401,7 @@ span[style*="font-size:8pt"] * {
   margin: 1rem 0 0;
   width: 100%;
   text-transform: uppercase;
+  font-size: 0.875rem;
   font-weight: bold;
   color: #afd9f9;
   outline: none;
@@ -3390,3 +3391,4 @@ img[src*="style_emoticons"] {
 #rules .post_body {
   margin: 0.5rem;
 }
+
