--- a/4pdasources/src/main/assets/forum/css/material_light.css
+++ b/4pdasources/src/main/assets/forum/css/material_light.css
@@ -354,6 +354,7 @@ span[style*="font-size:8pt"] * {
   margin: 1rem 0 0;
   width: 100%;
   text-transform: uppercase;
+  font-size: 0.875rem;
   font-weight: bold;
   color: #3490c3;
   outline: none;
@@ -3343,3 +3344,4 @@ img[src*="style_emoticons"] {
 #rules .post_body {
   margin: 0.5rem;
 }
+
